# McpProxy

./: Caddyfile  DEPLOYMENT.md  DEPLOYMENT_OPENWEBUI.md  McpProxy-Gateway.spec  launch.bat  launch.ps1  launcher.py  main.py  pyproject.toml  register_mcp.py  verify_mcp.py
src/mcp_proxy/: client.py  config.py  exceptions.py  mock_client.py  protocol.py  proxy.py  server.py  stdio_client.py  todo.py  utils.py
static/: index.html
tests/: test_client.py  test_protocol.py
