[project]
name = "mcpproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyinstaller>=6.19.0",
    "pystray>=0.19.5",
    "requests>=2.33.1",
    "sse-starlette>=3.3.4",
    "tenacity>=9.1.4",
    "uvicorn>=0.44.0",
]
